@@ -1,3 +1,12 @@
+2008-03-26  Don Scorgie  <Don@Scorgie.org>
+
+	* src/Browser.py: 
+	Only remember browser window size
+	using gconf when not running
+	under Windows (gconf isn't available
+	there.  We need another solution)
+	
+
 2008-03-25 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
 	* src/utils.py
